function "detail information of selected adm" added; UI revised

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 .RData
 .Ruserdata
 rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID19-dashboard.dcf
+rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID19-dashboard.dcf
+rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID19-dashboard.dcf
+rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID19-dashboard.dcf
+.Rproj.user/73EF2227/sources/prop/254729C2
+.Rproj.user/73EF2227/sources/prop/5FA1F0AC
+.Rproj.user/73EF2227/sources/prop/6A6A9447
+.Rproj.user/shared/notebooks/paths
+.DS_Store
