data connection bug fixed; UI revised
Failure getting PDF link

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID19-dashboard.dcf
 .Rproj.user/73EF2227/sources/prop/6A6A9447
 .Rproj.user/shared/notebooks/paths
 .DS_Store
+rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID.dcf
+.Rhistory
+.RData
