--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID19-dashboard.dcf
 rsconnect/shinyapps.io/tzeliliu/Taiwan-COVID.dcf
 .Rhistory
 .RData
+data/.DS_Store
+.spyproject/config/workspace.ini
+.spyproject/config/vcs.ini
+.spyproject/config/encoding.ini
+.spyproject/config/defaults/defaults-workspace-0.2.0.ini
+.spyproject/config/defaults/defaults-vcs-0.2.0.ini
+.spyproject/config/defaults/defaults-encoding-0.2.0.ini
+.spyproject/config/defaults/defaults-codestyle-0.2.0.ini
+.spyproject/config/codestyle.ini
+.Rhistory
+.RData
+.DS_Store
